--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -4,12 +4,15 @@
   box-sizing: border-box;
 }
 
+.text-p{
+  font-size: 35px;
+}
+
 .calculat {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
 }
 
 .input {
